Fixed check-in posts within the comments section not being aligned correctly

--- a/css/style.css
+++ b/css/style.css
@@ -3858,10 +3858,7 @@ a.feed-business-link:not(.mapboxgl-ctrl-logo) {
     object-fit: cover;
 }
 
-.feed-thread-post .feed-checkin-photo {
-    width: 100%;
-    margin-left: 0;
-}
+
 
 .checkin-modal {
     position: fixed;
